# quantdesk-v0.1

./: .bmad-flattenignore  .cursorrules  .dockerignore  .env.example  .eslintrc.env.json  .gitignore  .railwayignore  ACCOUNTNOTSIGNER_ROOT_CAUSE_FIX.md  ADVANCED_FEATURES_README.md  BACKEND_OPTIMIZATION_GUIDE.md  BUILD_FIX_SUMMARY.md  CI_CD_README.md  CODE_OF_CONDUCT.md  COLLATERAL_CONVERSION_SUMMARY.md  COLLATERAL_USD_FIX.md  COMPETITIVE_ANALYSIS_INTEGRATION.md  CONDITIONAL_ORDER_MONITOR_IMPLEMENTATION.md  CONTRIBUTING.md  DEMO_QUICK_CHECKLIST.md  DEMO_SCRIPT_READY_TO_FILM.md  DEPLOYMENT_GUIDE.md  DEPOSIT_DIAGNOSTIC_REPORT.md  DEPOSIT_FIX_INSIGHTS.md  DEVNET_TESTING_CHECKLIST.md  DOCS_CLEANUP_SUMMARY.md  DOCUMENTATION_INTEGRATION.md  DOCUMENTATION_ORGANIZATION_SUMMARY.md  DRIFT_DEPOSIT_ANALYSIS.md  Dockerfile  Dockerfile.admin  Dockerfile.backend  Dockerfile.data-ingestion  Dockerfile.frontend  FINAL_FIX_ACCOUNTNOTSIGNER.md  FINAL_TEST_RESULTS.md  FRONTEND_PROGRAM_ID_FIX.md  LICENSE  LITE_MODE_COLOR_SCHEME.md  MIKEY_AI_SERVICE.md  MOCK_DATA_SETUP.md  (+57 more)
.bmad-core/: core-config.yaml  install-manifest.yaml
.docker/: .dockerignore  Dockerfile  Dockerfile.data-ingestion  docker-compose.yml
.github/: dependabot.yml
MIKEY-AI/: .dockerignore  .env.example  .eslintrc.js  .lintstagedrc.js  AVAILABLE_TOOLS_AND_APIS.md  BUILD_FIXED.md  CHANGELOG.md  LICENSE  (+18 more)
contracts/programs/quantdesk-perp-dex/: Cargo.toml
contracts/programs/quantdesk-perp-dex/src/: collateral.rs  errors.rs  lib.rs  markets.rs  oracle.rs  price_cache.rs  security.rs  token_operations.rs  user_accounts.rs  utils.rs
contracts/programs/quantdesk-perp-dex/src/instructions/: advanced_orders.rs  collateral_management.rs  keeper_management.rs  order_management.rs  position_management.rs  remaining_contexts.rs  security_management.rs  user_account_management.rs
contracts/programs/quantdesk-perp-dex/src/oracle/: consensus.rs  mod.rs  switchboard.rs
contracts/programs/quantdesk-perp-dex/src/oracle_optimization/: batch_validation.rs  consensus.rs  mod.rs  switchboard.rs
contracts/programs/quantdesk-perp-dex/src/state/: collateral.rs  market.rs  mod.rs  order.rs  price_cache.rs  user_account.rs
contracts/programs/vault-recovery/: Cargo.toml
contracts/programs/vault-recovery/src/: lib.rs
contracts/smart-contracts/programs/quantdesk-perp-dex/: Cargo.toml
contracts/smart-contracts/programs/quantdesk-perp-dex/src/: lib.rs
(+2411 files in other folders)
