[package]
name = "quantdesk-perp-dex"
version = "0.1.0"
description = "QuantDesk Perpetual DEX Smart Contracts"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "quantdesk_perp_dex"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]


[dependencies]
anchor-lang = "0.31.0"
anchor-spl = "0.31.0"
pyth-sdk-solana = "0.10.0"

